--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
         "laravel/framework": "^10.10",
+        "laravel/horizon": "^5.16",
         "laravel/tinker": "^2.8",
         "predis/predis": "^2.1",
         "tightenco/ziggy": "^1.0"
