--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue-tsc": "^1.2.0"
     },
     "dependencies": {
+        "primeicons": "^6.0.1",
         "primevue": "^3.29.2"
     }
 }
