--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,17 +10,12 @@
         "plugin:@typescript-eslint/recommended",
         "prettier"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parser": "vue-eslint-parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "vue",
-        "@typescript-eslint"
-    ],
-    "rules": {
-    }
+    "plugins": ["vue", "@typescript-eslint"],
+    "rules": {}
 }
