--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,7 @@
         "sourceType": "module"
     },
     "plugins": ["vue", "@typescript-eslint"],
-    "rules": {}
+    "rules": {
+        "vue/multi-word-component-names": "off"
+    }
 }
