--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
     "parser": "vue-eslint-parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "parser": "@typescript-eslint/parser"
     },
     "plugins": ["vue", "@typescript-eslint"],
     "rules": {
