--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,11 @@
     "parser": "vue-eslint-parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "parser": "@typescript-eslint/parser"
     },
     "plugins": ["vue", "@typescript-eslint"],
-    "rules": {}
+    "rules": {
+        "vue/multi-word-component-names": "off"
+    }
 }
