--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vue-macros/volar": "^0.11.0",
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
@@ -25,6 +26,7 @@
         "prettier": "2.8.8",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
+        "unplugin-vue-define-options": "^1.3.8",
         "vite": "^4.0.0",
         "vue": "^3.2.41",
         "vue-tsc": "^1.2.0"
