--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,13 @@
         "skipLibCheck": true,
         "paths": {
             "@/*": ["./resources/js/*"]
-        }
+        },
+        "types": ["unplugin-vue-define-options/macros-global"]
+    },
+    "vueCompilerOptions": {
+        "plugins": [
+            "@vue-macros/volar/define-options"
+        ]
     },
     "include": [
         "resources/js/**/*.ts",
