--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,7 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:vue/vue3-essential",
-        "plugin:@typescript-eslint/recommended",
-        "prettier"
-    ],
+    "extends": ["eslint:recommended", "plugin:vue/vue3-essential", "plugin:@typescript-eslint/recommended", "prettier"],
     "overrides": [],
     "parser": "vue-eslint-parser",
     "parserOptions": {
