--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,7 @@
         "types": ["unplugin-vue-define-options/macros-global"]
     },
     "vueCompilerOptions": {
-        "plugins": [
-            "@vue-macros/volar/define-options"
-        ]
+        "plugins": ["@vue-macros/volar/define-options"]
     },
-    "include": [
-        "resources/js/**/*.ts",
-        "resources/js/**/*.d.ts",
-        "resources/js/**/*.vue"
-    ]
+    "include": ["resources/js/**/*.ts", "resources/js/**/*.d.ts", "resources/js/**/*.vue"]
 }
