--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vue-tsc": "^1.2.0"
     },
     "dependencies": {
+        "@vueuse/core": "^10.2.1",
         "lucide-vue-next": "^0.252.0",
         "primeicons": "^6.0.1",
         "primevue": "^3.29.2",
