--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "eslint-plugin-vue": "^9.15.1",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
-        "prettier": "2.8.8",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.4.1",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "unplugin-vue-define-options": "^1.3.8",
