--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "inertiajs/inertia-laravel": "^0.6.8",
         "laravel/framework": "^10.10",
         "laravel/horizon": "^5.16",
+        "laravel/socialite": "^5.8",
         "laravel/tinker": "^2.8",
         "predis/predis": "^2.1",
         "tightenco/ziggy": "^1.0"
