update .env.sample with required google client and secret keys

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,6 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 VITE_APP_NAME="${APP_NAME}"
 VITE_INERTIA_SSR_PORT="${INERTIA_SSR_PORT}"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
