--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/socialite": "^5.8",
         "laravel/tinker": "^2.8",
         "predis/predis": "^2.1",
+        "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
