--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "axios": "^1.1.2",
         "eslint": "^8.43.0",
         "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-sort": "^2.10.0",
         "eslint-plugin-vue": "^9.15.1",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
