--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "spatie/laravel-ray": "^1.33"
     },
     "autoload": {
         "psr-4": {
