--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/horizon": "^5.16",
         "laravel/socialite": "^5.8",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "predis/predis": "^2.1",
+        "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.0"
     },
