--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,25 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": [
-    "plugin:sort/recommended",
-    "eslint:recommended",
-    "plugin:vue/vue3-essential",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
-  ],
-  "overrides": [],
-  "parser": "vue-eslint-parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "parser": "@typescript-eslint/parser"
-  },
-  "plugins": [
-    "vue",
-    "sort",
-    "@typescript-eslint"
-  ],
-  "rules": {
-    "vue/multi-word-component-names": "off"
-  }
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "node": true
+    },
+    "extends": [
+        "plugin:sort/recommended",
+        "eslint:recommended",
+        "plugin:vue/vue3-essential",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+    ],
+    "overrides": [],
+    "parser": "vue-eslint-parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "parser": "@typescript-eslint/parser"
+    },
+    "plugins": ["vue", "sort", "@typescript-eslint"],
+    "rules": {
+        "vue/multi-word-component-names": "off"
+    }
 }
