--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/.phpunit.cache
 /bootstrap/ssr
 /node_modules
 /public/build
@@ -16,7 +15,9 @@ Homestead.yaml
 auth.json
 npm-debug.log
 yarn-error.log
+/.phpunit.cache
 /.fleet
 /.idea
 /.vscode
+/.phpactor.json
 resources/js/ziggy.js
