--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "larastan/larastan": "^2.0",
         "laravel/breeze": "^1.21",
         "laravel/pint": "^1.10",
         "laravel/sail": "^1.18",
         "laravel/telescope": "^4.14",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.0",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0",
         "spatie/laravel-ray": "^1.33"
