--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,19 @@
 includes:
-    - ./vendor/nunomaduro/larastan/extension.neon
+    - ./vendor/larastan/larastan/extension.neon
 
 parameters:
-
     paths:
         - app/
 
-    # Level 9 is the highest level
     level: 6
+
+    ignoreErrors:
+        - '#Call to an undefined method Symfony\\Component\\HttpFoundation\\Response::status\(\)#'
+        - '#Call to an undefined method Spatie\\Image\\Manipulations::nonQueued\(\)#'
+        - '#Access to an undefined property Laravel\\Socialite\\Contracts\\User#'
+
+    treatPhpDocTypesAsCertain: false
+    checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
+    checkModelProperties: true
+    noUnnecessaryCollectionCall: false
