--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,10 @@
         ],
         "before-commit": [
             "./vendor/bin/pint",
-            "./vendor/bin/phpstan analyse"
+            "./vendor/bin/phpstan analyse",
+            "npm run format",
+            "npm run lint",
+            "npm run build"
         ]
     },
     "extra": {
