--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "@vueuse/core": "^10.2.1",
+        "moment-timezone": "^0.5.45",
         "primeicons": "^6.0.1",
         "primevue": "^3.29.2",
         "vite-plugin-static-copy": "^0.16.0"
