--- a/package.json
+++ b/package.json
@@ -1,45 +1,47 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vue-tsc && vite build && vite build --ssr",
-        "serve:ssr": "node bootstrap/ssr/ssr.js",
-        "lint": "eslint --ext .js,.ts,.vue .",
-        "format": "prettier --write ."
-    },
-    "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@types/ziggy-js": "^1.3.2",
-        "@typescript-eslint/eslint-plugin": "^7.5.0",
-        "@typescript-eslint/parser": "^7.5.0",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "@vue-macros/volar": "^0.11.0",
-        "@vue/server-renderer": "^3.2.31",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.1.2",
-        "eslint": "^8.57.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-sort": "^2.10.0",
-        "eslint-plugin-vue": "^9.15.1",
-        "laravel-vite-plugin": "^0.7.5",
-        "lucide-vue-next": "^0.365.0",
-        "postcss": "^8.4.18",
-        "prettier": "^2.8.8",
-        "prettier-plugin-tailwindcss": "^0.4.1",
-        "tailwindcss": "^3.2.1",
-        "typescript": "^5.0.2",
-        "unplugin-vue-define-options": "^1.3.8",
-        "vite": "^4.0.0",
-        "vue": "^3.4.21",
-        "vue-tsc": "^1.2.0"
-    },
-    "dependencies": {
-        "@vueuse/core": "^10.2.1",
-        "moment-timezone": "^0.5.45",
-        "primeicons": "^6.0.1",
-        "primevue": "^3.29.2",
-        "vite-plugin-static-copy": "^0.16.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc && vite build && vite build --ssr",
+    "serve:ssr": "node bootstrap/ssr/ssr.js",
+    "lint": "eslint --ext .js,.ts,.vue .",
+    "format": "prettier --write .",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "@inertiajs/vue3": "^1.0.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@types/ziggy-js": "^1.3.2",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue-macros/volar": "^0.11.0",
+    "@vue/server-renderer": "^3.2.31",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.1.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-sort": "^2.10.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "husky": "^9.0.11",
+    "laravel-vite-plugin": "^0.7.5",
+    "lucide-vue-next": "^0.365.0",
+    "postcss": "^8.4.18",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.2.1",
+    "typescript": "^5.0.2",
+    "unplugin-vue-define-options": "^1.3.8",
+    "vite": "^4.0.0",
+    "vue": "^3.4.21",
+    "vue-tsc": "^1.2.0"
+  },
+  "dependencies": {
+    "@vueuse/core": "^10.2.1",
+    "moment-timezone": "^0.5.45",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.29.2",
+    "vite-plugin-static-copy": "^0.16.0"
+  }
 }
