--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "laravel/telescope": "^4.14",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
+        "pestphp/pest": "^2.34",
         "spatie/laravel-ignition": "^2.0",
         "spatie/laravel-ray": "^1.33"
     },
@@ -58,15 +58,23 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
+        "ziggy": [
+            "@php artisan ziggy:generate"
+        ],
         "phpstan": [
             "./vendor/bin/phpstan analyse"
         ],
         "pint": [
             "./vendor/bin/pint"
         ],
+        "test": [
+            "./vendor/bin/pest"
+        ],
         "before-commit": [
-            "./vendor/bin/pint",
-            "./vendor/bin/phpstan analyse",
+            "composer run pint",
+            "composer run phpstan",
+            "composer run test",
+            "composer run ziggy",
             "npm run format",
             "npm run lint",
             "npm run build"
