--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "predis/predis": "^2.1",
         "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-data": "^4.6",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10",
+        "spatie/laravel-typescript-transformer": "^2.4",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
