initial commit for sitemap xml

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "spatie/laravel-data": "^4.6",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10",
+        "spatie/laravel-sitemap": "^7.0",
         "spatie/laravel-typescript-transformer": "^2.4",
         "tightenco/ziggy": "^1.0"
     },
